--- a/package.json
+++ b/package.json
@@ -3,22 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/themes": "^3.1.5",
+    "@vitejs/plugin-react": "^4.3.3",
+    "next": "15.0.3",
+    "next-themes": "^0.4.3",
+    "prisma": "^5.22.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "vitest-matchmedia-mock": "^1.0.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "@vitest/coverage-v8": "^2.1.4",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "15.0.3",
+    "jsdom": "^25.0.1",
+    "next-router-mock": "^0.9.13",
+    "prettier": "^3.3.3",
+    "typescript": "^5",
+    "vitest": "^2.1.4"
   }
 }
