--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "prettier:format": "prettier --write src"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
@@ -31,6 +32,7 @@
     "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.3",
+    "husky": "^9.1.6",
     "jsdom": "^25.0.1",
     "next-router-mock": "^0.9.13",
     "prettier": "^3.3.3",
