build test pipeline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  ci-build:
+  ci-build-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,3 +20,5 @@ jobs:
       - name: Build app with .env
         run: |
           echo DATABASE_URL="postgresql://sample:12345@localhost:5432/test?schema=public" >> .env
+      - run: npm run build
+      - run: npm run test:coverage
