--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage --watch=false",
+    "prettier:format": "prettier --write src",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/themes": "^3.1.5",
+    "@radix-ui/themes": "^3.1.6",
     "@vitejs/plugin-react": "^4.3.3",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
@@ -31,6 +33,7 @@
     "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.3",
+    "husky": "^9.1.6",
     "jsdom": "^25.0.1",
     "next-router-mock": "^0.9.13",
     "prettier": "^3.3.3",
