--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage --watch=false",
     "prettier:format": "prettier --write src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "check:access": "tsx scripts/check-access.ts"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -37,7 +38,7 @@
     "jsdom": "^25.0.1",
     "next-router-mock": "^0.9.13",
     "prettier": "^3.3.3",
-    "typescript": "^5",
+    "tsx": "^4.19.2",
     "vitest": "^2.1.4"
   }
 }
