--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage --watch=false",
     "prettier:format": "prettier --write src",
-    "prepare": "husky",
-    "check:access": "tsx scripts/check-access.ts"
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
