--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jsdom": "^25.0.1",
     "next-router-mock": "^0.9.13",
     "prettier": "^3.3.3",
-    "typescript": "^5",
+    "tsx": "^4.19.2",
     "vitest": "^2.1.4"
   }
 }
