--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@vitejs/plugin-react": "^4.3.4",
+    "chart.js": "^4.4.6",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "prisma": "^5.22.0",
