--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage --watch=false",
     "prettier:format": "prettier --write src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -25,6 +27,14 @@
     "vitest-matchmedia-mock": "^1.0.6"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.6",
+    "@storybook/addon-interactions": "^8.4.6",
+    "@storybook/addon-onboarding": "^8.4.6",
+    "@storybook/blocks": "^8.4.6",
+    "@storybook/nextjs": "^8.4.6",
+    "@storybook/react": "^8.4.6",
+    "@storybook/test": "^8.4.6",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^22",
@@ -33,10 +43,12 @@
     "@vitest/coverage-v8": "^2.1.6",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
+    "eslint-plugin-storybook": "^0.11.1",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "next-router-mock": "^0.9.13",
     "prettier": "^3.4.1",
+    "storybook": "^8.4.6",
     "tsx": "^4.19.2",
     "vitest": "^2.1.4"
   }
