--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,7 @@ jobs:
           echo DATABASE_URL="postgresql://sample:12345@localhost:5432/test?schema=public" >> .env
       - run: npm run build
       - run: npm run test:coverage
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
