--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier:format": "prettier --write src",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "check": "depcheck ."
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -41,6 +42,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitest/coverage-v8": "^2.1.8",
+    "depcheck": "^1.4.7",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-storybook": "^0.11.1",
