--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "prettier:format": "prettier --write src",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "check": "depcheck ."
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@vitejs/plugin-react": "^4.3.4",
     "chart.js": "^4.4.7",
-    "next": "15.1.0",
+    "next": "15.1.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -41,8 +42,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitest/coverage-v8": "^2.1.8",
+    "depcheck": "^1.4.7",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "15.1.1",
     "eslint-plugin-storybook": "^0.11.1",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
